--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "child_process": "^1.0.2",
     "choose-port": "^0.3.2",
@@ -19,5 +22,9 @@
     "open": "^8.0.4",
     "webpack": "^5.28.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "devDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
