ci: try fix yml syntax

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,4 +6,9 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-      run: npm publish --access public
+      steps:
+      - name: login
+        run: npm login
+      
+      - name: publish
+        run: npm publish --access public
