--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,11 @@
 name: npm-publish
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
+  # release:
+  #   types: [published]
 
 jobs:
   publish:
