--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,8 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: login
-      run: npm config set registry https://registry.npmjs.org/
-      run: npm login
+      run: npm config set registry https://registry.npmjs.org/ && npm login
     
     - name: publish
       run: npm publish --access public
