--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,5 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: JS-DevTools/npm-publish@v1
+      uses: ./
       with:
         token: ${{ secrets.NPM_TOKEN }}
