--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-react-scripts",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "index.js",
   "author": "Sandro Motyl",
   "license": "MIT",
@@ -20,11 +20,15 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "babel-loader": "^8.2.2",
     "child_process": "^1.0.2",
     "choose-port": "^0.3.2",
     "html-webpack-plugin": "^5.3.1",
     "open": "^8.0.4",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.3",
     "webpack": "^5.28.0",
     "webpack-dev-server": "^3.11.2"
   },
