--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-react-scripts",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "main": "index.js",
   "author": "Sandro Motyl",
   "license": "MIT",
@@ -25,8 +25,10 @@
     "babel-loader": "^8.2.2",
     "child_process": "^1.0.2",
     "choose-port": "^0.3.2",
+    "css-loader": "^5.2.0",
     "html-webpack-plugin": "^5.3.1",
     "open": "^8.0.4",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
