--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-react-scripts",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "main": "index.js",
   "author": "Sandro Motyl",
   "license": "MIT",
@@ -35,7 +35,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.2"
   }
 }
